all css aligned better and video is fixed top right smaller size

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -22,7 +22,7 @@ body {
  * Sidebar
  */
 
-/* Hide for mobile, show later */
+/* Hide for mobile, show later
 .sidebar {
   display: none;
 }
@@ -36,11 +36,12 @@ body {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content.
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
+*/
 
 /* Sidebar navigation */
 .nav-sidebar {
@@ -112,12 +113,12 @@ body {
 }
 /*
  * navbar angular
- */
+
 .ruby {
    font-family: helvetica, arial;
     font-size: 15;
     color: #77ff33;
-}
+} */
 
 /*
  * instant search css
@@ -138,11 +139,11 @@ body {
 }
 #result
 {
-    background-color:#000;
+    background-color: #bababa;
     margin-top:25px;
-    margin-left: 345px;
+    margin-left: -300px;
     min-height:400px;
-    width:640px;
+    width:450px;
     border:solid 10px #ffffff;
 
     -moz-border-radius:9px;
@@ -186,3 +187,9 @@ body {
     padding-top: 15px;
 }
 #videoslisting li .meta p { margin-bottom: 4px; }
+
+
+.chartcontainer {
+height: 300px;
+width:300px;
+}
